Fix card title overflowing container

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,10 @@
     padding: 0;
 }
 
+h1,h2,h3,h4,h5 {
+  word-break: break-word;
+}
+
 body{
     width: 100vw;
     height: 100vh;
